ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "votre-domaine.com"  # Remplace par ton domaine
      http:
        paths:
          - path: /app/
            pathType: Prefix
            backend:
              service:
                name: app-service  # Nom de ton service
                port:
                  number: 80
